# bac_ros_dev

./: LICENSE.md  README.md
evo_autonom_driving/: CMakeLists.txt  README.md  package.xml
evo_autonom_driving/action/: DriveInside.action
evo_autonom_driving/config/: config.yaml  evo (backup).rviz  evo.rviz  evo_sim.rviz  rviz_navigation.rviz
evo_autonom_driving/data/: sampled_table_template.pcd
evo_autonom_driving/include/evo_autonom_driving/: DriveBeneathTableController.hpp  InitialEstimateCalculator.hpp  PointCloudFilter.hpp  TargetLocalizer.hpp
evo_autonom_driving/include/evo_autonom_driving/common/: ClusterExtractor.hpp  GICP.hpp  Resources.hpp  RobotUtil.hpp  SharedBehaviour.hpp  Util.hpp
evo_autonom_driving/launch/: drive_beneath_table_controller.launch  drive_inside_action_client.launch  drive_inside_action_server.launch  for_real_robot.launch  for_simulator.launch  point_cloud_filter.launch  target_localizer.launch
evo_autonom_driving/src/: DriveBeneathTableController.cpp  InitialEstimateCalculator.cpp  PointCloudFilter.cpp  TargetLocalizer.cpp  drive_beneath_table_controller_node.cpp  evo_drive_inside_client.cpp  evo_drive_inside_server.cpp  point_cloud_filter_node.cpp  target_localizer_node.cpp
evo_autonom_driving/src/common/: ClusterExtractor.cpp  GICP.cpp  RobotUtil.cpp  Util.cpp
evo_autonom_driving/test/: evo_Tests.cpp  initial_estimator_tests.cpp
ira_laser_tools/: CMakeLists.txt  README.md  package.xml
ira_laser_tools/launch/: laserscan_multi_merger.launch
ira_laser_tools/src/: laserscan_multi_merger.cpp
